--- a/.github/workflows/image_updater.yaml
+++ b/.github/workflows/image_updater.yaml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
         run:
-          working-directory: packer/updater
+          shell: bash
+          working-directory: ./packer/updater
     steps:
       - name: Log in with Azure
         uses: azure/login@v1
