--- a/.github/workflows/image_updater.yaml
+++ b/.github/workflows/image_updater.yaml
@@ -11,6 +11,10 @@ jobs:
           shell: bash
           working-directory: ./packer/updater
     steps:
+          # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v3
+        
       - name: Log in with Azure
         uses: azure/login@v1
         with:
