--- a/.github/workflows/image_updater.yaml
+++ b/.github/workflows/image_updater.yaml
@@ -50,12 +50,13 @@ jobs:
          minor=$(echo $version | cut -d. -f2)
          patch=$(echo $version | cut -d. -f3)
          patch=$((patch + 1))
-         echo 'new_version="$major.$minor.$patch"' >> $GITHUB_OUTPUT
-        #  echo "Nouvelle version : $new_version"
+         new_version="$major.$minor.$patch"
+         echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
+         echo "Nouvelle version : $new_version"
 
       - name: Update existing image
         id: build
         run: 'packer build -force -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" \
              -var="resource_group=${{ vars.RESOURCE_GROUP }}" \
              -var="gallery_name=${{ vars.GALLERY_NAME }}" \
-             -var="version=${{ steps.version.outputs.new_version }}" . '
+             -var="version=${{ env.NEW_VERSION }}" . '
