--- a/.github/workflows/image_updater.yaml
+++ b/.github/workflows/image_updater.yaml
@@ -1,4 +1,4 @@
-name: Update Custom VM Image
+name: Update Custom Gitlab VM Image
 on: 
     workflow_dispatch:
     # schedule:
@@ -11,7 +11,6 @@ jobs:
           shell: bash
           working-directory: ./packer/updater
     steps:
-          # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -56,7 +55,7 @@ jobs:
 
       - name: Update existing image
         id: build
-        run: 'packer build -force -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" \
-             -var="resource_group=${{ vars.RESOURCE_GROUP }}" \
-             -var="gallery_name=${{ vars.GALLERY_NAME }}" \
+        run: 'packer build -force -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" 
+             -var="resource_group=${{ vars.RESOURCE_GROUP }}" 
+             -var="gallery_name=${{ vars.GALLERY_NAME }}" 
              -var="version=${{ env.NEW_VERSION }}" . '
