--- a/.github/workflows/gitlab_updater.yaml
+++ b/.github/workflows/gitlab_updater.yaml
@@ -12,6 +12,7 @@ jobs:
           working-directory: ./packer/updater
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v3
 
       - name: Log in with Azure
@@ -30,19 +31,19 @@ jobs:
       - name: Run `packer validate`
         id: validate
         run: |
-         packer validate -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" \
-         -var="resource_group=${{ vars.RESOURCE_GROUP }}" \
-         -var="gallery_name=${{ vars.GALLERY_NAME }}" \
-         -var="version=1.0.1"  \
+         packer validate -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" 
+         -var="resource_group=${{ vars.RESOURCE_GROUP }}" 
+         -var="gallery_name=${{ vars.GALLERY_NAME }}" 
+         -var="version=1.0.1"  
          -var="managed_image_name=gitlab"  .
 
       - name: Find latest version
         id: version
         run: |
-         version=$(az sig image-version list --gallery-name ${{ vars.GALLERY_NAME }} \
-         --gallery-image-definition gitlab \
-         --resource-group ${{ vars.RESOURCE_GROUP }} \
-         --subscription ${{ vars.SUBSCRIPTION_ID }} \
+         version=$(az sig image-version list --gallery-name ${{ vars.GALLERY_NAME }} 
+         --gallery-image-definition gitlab 
+         --resource-group ${{ vars.RESOURCE_GROUP }} 
+         --subscription ${{ vars.SUBSCRIPTION_ID }} 
          --query '[-1:].name' -o tsv)
          echo "Latest image version is $version"
          major=$(echo $version | cut -d. -f1)
@@ -51,7 +52,7 @@ jobs:
          patch=$((patch + 1))
          new_version="$major.$minor.$patch"
          echo "NEW_VERSION=$new_version" >> $GITHUB_ENV
-         echo "Nouvelle version : $new_version"
+         echo "New version will be: $new_version"
 
       - name: Update existing image
         id: build
