--- a/.github/workflows/gitlab_updater.yaml
+++ b/.github/workflows/gitlab_updater.yaml
@@ -40,11 +40,11 @@ jobs:
       - name: Find latest version
         id: version
         run: |
-         version=$(az sig image-version list --gallery-name ${{ vars.GALLERY_NAME }} 
-         --gallery-image-definition gitlab 
-         --resource-group ${{ vars.RESOURCE_GROUP }} 
-         --subscription ${{ vars.SUBSCRIPTION_ID }} 
-         --query '[-1:].name' -o tsv)
+         version=$(az sig image-version list --gallery-name ${{ vars.GALLERY_NAME }} \
+         --gallery-image-definition gitlab \
+         --resource-group ${{ vars.RESOURCE_GROUP }} \
+         --subscription ${{ vars.SUBSCRIPTION_ID }} \
+         --query '[-1:].name' -o tsv) 
          echo "Latest image version is $version"
          major=$(echo $version | cut -d. -f1)
          minor=$(echo $version | cut -d. -f2)
@@ -56,7 +56,8 @@ jobs:
 
       - name: Update existing image
         id: build
-        run: 'packer build -force -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" 
-             -var="resource_group=${{ vars.RESOURCE_GROUP }}" 
-             -var="gallery_name=${{ vars.GALLERY_NAME }}" 
-             -var="version=${{ env.NEW_VERSION }}" . '
+        run: |
+          packer build -force -var="subscription_id=${{ vars.SUBSCRIPTION_ID }}" \ 
+             -var="resource_group=${{ vars.RESOURCE_GROUP }}" \
+             -var="gallery_name=${{ vars.GALLERY_NAME }}" \
+             -var="version=${{ env.NEW_VERSION }}" . 
